--- a/src/REstate.Web.Core/Schemas.resx
+++ b/src/REstate.Web.Core/Schemas.resx
@@ -117,10 +117,69 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Body" xml:space="preserve">
+    <value>{
+            "id": "{host}/code/body",
+            "name": "Body",
+            "title": "Body",
+             "type": "string",
+             "format": "code",
+             "options": {
+                   "input_height": "100px",
+                   "format": "text"
+              }
+}</value>
+  </data>
+  <data name="ChronoConnector" xml:space="preserve">
+    <value>{
+    "id": "{host}/connectors/chrono/body",
+    "title":"Body",
+    "type": "object",
+    "format": "normal",
+    "additionalProperties": false,
+    "defaultProperties": [
+        "name",
+        "delay",
+        "payload"
+    ],
+    "properties": {
+        "name": {
+            "id": "{host}/connectors/chrono/body/trigger-name",
+            "type": "string",
+            "name": "TriggerName",
+            "title": "Trigger Name",
+            "default": null
+        },
+        "delay": {
+            "id": "{host}/connectors/chrono/body/delay",
+            "name": "Delay",
+            "title": "Delay Period (seconds)",
+            "type": "integer",
+            "default": 30
+        },
+        "payload": {
+            "id": "{host}/connectors/chrono/body/payload",
+            "type": "string",
+            "name": "Payload",
+            "title": "Payload",
+            "default": null,
+            "format": "code",
+            "options": {
+                "input_height": "100px",
+                "format": "text"
+            }
+        }
+    },
+    "required": [
+        "name",
+        "delay"
+    ]
+}</value>
+  </data>
   <data name="Code" xml:space="preserve">
     <value>{
     "$schema": "http://json-schema.org/draft-04/schema#",
-    "id": "{host}/code",
+    "id": "{host}/code/{connectorName}",
     "type": "object",
     "default": null,
     "format": "normal",
@@ -147,19 +206,9 @@
             "type": "string",
             "name": "ConnectorKey",
             "title": "Connector Key",
-            "default": null
+            "default": {connectorKey}
         },
-        "body": {
-            "id": "{host}/code/body",
-            "type": "string",
-            "name": "Body",
-            "title": "Body",
-            "format": "code",
-            "options": {
-                "input_height": "100px",
-                "format": "text"
-            }
-        },
+        "body": {body},
         "options": {
             "id": "{host}/code/options",
             "type": "object",
@@ -188,189 +237,191 @@
   </data>
   <data name="Machine" xml:space="preserve">
     <value>{
-    "$schema": "http://json-schema.org/draft-04/schema#",
-    "id": "{host}/machine",
-    "type": "object",
-    "name": "Machine",
-    "title": "Machine Definition",
-    "required": [
-        "machineName",
-        "initialState",
-        "autoIgnoreTriggers",
-        "stateConfigurations"
-    ],
-    "additionalProperties": false,
-    "options": {
-        "disable_properties": true
-    },
-    "properties": {
-        "machineName": {
-            "id": "{host}/machine/name",
-            "type": "string",
-            "name": "MachineName",
-            "title": "Machine Name",
-            "default": null
+        "$schema": "http://json-schema.org/draft-04/schema#",
+        "id": "{host}/machine",
+        "type": "object",
+        "name": "Machine",
+        "title": "Machine Definition",
+        "required": [
+            "machineName",
+            "initialState",
+            "autoIgnoreTriggers",
+            "stateConfigurations"
+        ],
+        "additionalProperties": false,
+        "options": {
+            "disable_properties": true
         },
-        "initialState": {
-            "id": "{host}/machine/initial-state",
-            "type": "string",
-            "name": "InitialState",
-            "title": "Initial State Name",
-            "default": null
-        },
-        "autoIgnoreTriggers": {
-            "id": "{host}/machine/auto-ignore-triggers",
-            "type": "boolean",
-            "name": "AutoIgnoreTriggers",
-            "title": "Auto ignore triggers not defined in a transition?",
-            "default": false
-        },
-        "stateConfigurations": {
-            "id": "{host}/machine/state-configurations",
-            "type": "array",
-            "title": "States",
-            "items": {
-                "id": "{host}/machine/state-configurations/state",
-                "type": "object",
-                "name": "State",
-                "title": "State",
-                "headerTemplate": "{{ self.stateName }}",
-                "minItems": 1,
-                "additionalProperties": false,
-                "defaultProperties": [
-                    "stateName",
-                    "stateDescription",
-                    "transitions"
-                ],
-                "options": {
-                    "disable_edit_json": true
-                },
-                "properties": {
-                    "stateName": {
-                        "id": "{host}/state-configurations/state/name",
-                        "type": "string",
-                        "name": "Name",
-                        "title": "Name",
-                        "default": null
+        "properties": {
+            "machineName": {
+                "id": "{host}/machine/name",
+                "type": "string",
+                "name": "MachineName",
+                "title": "Machine Name",
+                "default": null
+            },
+            "initialState": {
+                "id": "{host}/machine/initial-state",
+                "type": "string",
+                "name": "InitialState",
+                "title": "Initial State Name",
+                "default": null
+            },
+            "autoIgnoreTriggers": {
+                "id": "{host}/machine/auto-ignore-triggers",
+                "type": "boolean",
+                "name": "AutoIgnoreTriggers",
+                "title": "Auto ignore triggers not defined in a transition?",
+                "default": false
+            },
+            "stateConfigurations": {
+                "id": "{host}/machine/state-configurations",
+                "type": "array",
+                "title": "States",
+                "items": {
+                    "id": "{host}/machine/state-configurations/state",
+                    "type": "object",
+                    "name": "State",
+                    "title": "State",
+                    "headerTemplate": "{{ self.stateName }}",
+                    "minItems": 1,
+                    "additionalProperties": false,
+                    "defaultProperties": [
+                        "stateName",
+                        "stateDescription",
+                        "transitions"
+                    ],
+                    "options": {
+                        "disable_edit_json": true
                     },
-                    "parentStateName": {
-                        "id": "{host}/state-configurations/state/parent-name",
-                        "type": "string",
-                        "name": "ParentStateName",
-                        "title": "Parent State Name",
-                        "default": null,
-                        "propertyOrder": 1001
-                    },
-                    "stateDescription": {
-                        "id": "{host}/state-configurations/state/description",
-                        "type": "string",
-                        "name": "Description",
-                        "title": "Description",
-                        "format": "textarea",
-                        "default": null,
-                        "options": {
-                            "input_height": "100px"
+                    "properties": {
+                        "stateName": {
+                            "id": "{host}/state-configurations/state/name",
+                            "type": "string",
+                            "name": "Name",
+                            "title": "Name",
+                            "default": null
                         },
-                        "propertyOrder": 1002
-                    },
-                    "onEntry": {
-                        "id": "{host}/state-configurations/state/on-entry",
-                        "type": "object",
-                        "name": "OnEntryAction",
-                        "title": "On Entry",
-                        "$ref": "{host}/code",
-                        "propertyOrder": 1003
-                    },
-                    "onEntryFrom": {
-                        "id": "{host}/state-configurations/state/on-entry-from-actions",
-                        "type": "array",
-                        "name": "OnEntryFromTriggers",
-                        "title": "On Entry From Triggers",
-                        "propertyOrder": 1004,
-                        "items": {
-                            "id": "{host}/state-configurations/state/on-entry-from-actions/on-entry-from",
-                            "type": "object",
-                            "name": "OnEntryFrom",
-                            "title": "On Entry From Trigger",
-                            "headerTemplate": "On Entry From {{self.fromTrigger}}",
-                            "$ref": "{host}/on-entry-from"
-                        }
-                    },
-                    "transitions": {
-                        "id": "{host}/state-configurations/state/transitions",
-                        "type": "array",
-                        "name": "Transitions",
-                        "title": "Transitions",
-                        "propertyOrder": 1005,
-                        "items": {
-                            "id": "{host}/state-configurations/state/transitions/transition",
-                            "type": "object",
-                            "name": "Transition",
-                            "title": "Transition",
-                            "format": "grid",
-                            "headerTemplate": "{{ self.triggerName }} -&gt; {{ self.resultantStateName }}",
-                            "additionalProperties": false,
-                            "defaultProperties": [
-                                "triggerName",
-                                "resultantStateName"
-                            ],
+                        "parentStateName": {
+                            "id": "{host}/state-configurations/state/parent-name",
+                            "type": "string",
+                            "name": "ParentStateName",
+                            "title": "Parent State Name",
+                            "default": null,
+                            "propertyOrder": 1001
+                        },
+                        "stateDescription": {
+                            "id": "{host}/state-configurations/state/description",
+                            "type": "string",
+                            "name": "Description",
+                            "title": "Description",
+                            "format": "textarea",
+                            "default": null,
                             "options": {
-                                "disable_edit_json": true
+                                "input_height": "100px"
                             },
-                            "properties": {
-                                "triggerName": {
-                                    "id": "{host}/state-configurations/state/transitions/transition/trigger-name",
-                                    "type": "string",
-                                    "name": "TriggerName",
-                                    "title": "Trigger Name"
+                            "propertyOrder": 1002
+                        },
+                        "onEntry": {
+                            "id": "{host}/state-configurations/state/on-entry",
+                            "type": "object",
+                            "name": "OnEntryAction",
+                            "title": "On Entry",
+                            "oneOf": [
+                                {connectors}
+                            ],
+                            "propertyOrder": 1003
+                        },
+                        "onEntryFrom": {
+                            "id": "{host}/state-configurations/state/on-entry-from-actions",
+                            "type": "array",
+                            "name": "OnEntryFromTriggers",
+                            "title": "On Entry From Triggers",
+                            "propertyOrder": 1004,
+                            "items": {
+                                "id": "{host}/state-configurations/state/on-entry-from-actions/on-entry-from",
+                                "type": "object",
+                                "name": "OnEntryFrom",
+                                "title": "On Entry From Trigger",
+                                "headerTemplate": "On Entry From {{self.fromTrigger}}",
+                                "$ref": "{host}/on-entry-from"
+                            }
+                        },
+                        "transitions": {
+                            "id": "{host}/state-configurations/state/transitions",
+                            "type": "array",
+                            "name": "Transitions",
+                            "title": "Transitions",
+                            "propertyOrder": 1005,
+                            "items": {
+                                "id": "{host}/state-configurations/state/transitions/transition",
+                                "type": "object",
+                                "name": "Transition",
+                                "title": "Transition",
+                                "format": "grid",
+                                "headerTemplate": "{{ self.triggerName }} -&gt; {{ self.resultantStateName }}",
+                                "additionalProperties": false,
+                                "defaultProperties": [
+                                    "triggerName",
+                                    "resultantStateName"
+                                ],
+                                "options": {
+                                    "disable_edit_json": true
                                 },
-                                "resultantStateName": {
-                                    "id": "{host}/state-configurations/state/transitions/transition/resultant-state-name",
-                                    "type": "string",
-                                    "name": "ResultantStateName",
-                                    "title": "Resultant State Name"
-                                },
-                                "guard": {
-                                    "id": "{host}/state-configurations/state/transitions/transition/guard",
-                                    "type": "object",
-                                    "name": "Guard",
-                                    "title": "Guard",
-                                    "$ref": "{host}/code",
-                                    "propertyOrder": 1002
+                                "properties": {
+                                    "triggerName": {
+                                        "id": "{host}/state-configurations/state/transitions/transition/trigger-name",
+                                        "type": "string",
+                                        "name": "TriggerName",
+                                        "title": "Trigger Name"
+                                    },
+                                    "resultantStateName": {
+                                        "id": "{host}/state-configurations/state/transitions/transition/resultant-state-name",
+                                        "type": "string",
+                                        "name": "ResultantStateName",
+                                        "title": "Resultant State Name"
+                                    },
+                                    "guard": {
+                                        "id": "{host}/state-configurations/state/transitions/transition/guard",
+                                        "type": "object",
+                                        "name": "Guard",
+                                        "title": "Guard",
+                                        "$ref": "{host}/code",
+                                        "propertyOrder": 1002
+                                    }
                                 }
                             }
+                        },
+                        "ignoreRules": {
+                            "id": "{host}/state-configurations/state/ignore-rules",
+                            "type": "array",
+                            "name": "IgnoreRules",
+                            "title": "Ignored Triggers",
+                            "propertyOrder": 1006,
+                            "items": {
+                                "id": "{host}/state-configurations/state/ignore-rules/trigger-name",
+                                "type": "string",
+                                "name": "TriggerName",
+                                "title": "Trigger",
+                                "headerTemplate": "{{ self }}"
+                            }
+                        },
+                        "onExit": {
+                            "id": "{host}/state-configurations/state/on-exit",
+                            "type": "object",
+                            "name": "OnExit",
+                            "title": "On Exit",
+                            "$ref": "{host}/code",
+                            "propertyOrder": 1007
                         }
                     },
-                    "ignoreRules": {
-                        "id": "{host}/state-configurations/state/ignore-rules",
-                        "type": "array",
-                        "name": "IgnoreRules",
-                        "title": "Ignored Triggers",
-                        "propertyOrder": 1006,
-                        "items": {
-                            "id": "{host}/state-configurations/state/ignore-rules/trigger-name",
-                            "type": "string",
-                            "name": "TriggerName",
-                            "title": "Trigger",
-                            "headerTemplate": "{{ self }}"
-                        }
-                    },
-                    "onExit": {
-                        "id": "{host}/state-configurations/state/on-exit",
-                        "type": "object",
-                        "name": "OnExit",
-                        "title": "On Exit",
-                        "$ref": "{host}/code",
-                        "propertyOrder": 1007
-                    }
-                },
-                "required": [
-                    "stateName"
-                ]
+                    "required": [
+                        "stateName"
+                    ]
+                }
             }
         }
-    }
-}</value>
+    }</value>
   </data>
   <data name="OnEntryFrom" xml:space="preserve">
     <value>{
